Worked on deletiontarget-logging. Needs to be tested now.

--- a/IntegrationTool.Module.DeleteInDynamicsCrm/Logging/LogWindow.xaml
+++ b/IntegrationTool.Module.DeleteInDynamicsCrm/Logging/LogWindow.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Generic="clr-namespace:IntegrationTool.SDK.Controls.Generic;assembly=IntegrationTool.SDK" x:Class="IntegrationTool.Module.DeleteInDynamicsCrm.Logging.LogWindow" 
+             xmlns:Generic="clr-namespace:IntegrationTool.SDK.Controls.Generic;assembly=IntegrationTool.SDK" xmlns:RecordLogList="clr-namespace:IntegrationTool.Module.DeleteInDynamicsCrm.Logging.RecordLogList" x:Class="IntegrationTool.Module.DeleteInDynamicsCrm.Logging.LogWindow" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -14,6 +14,8 @@
         </Grid.RowDefinitions>
 
         <Generic:LogSummaryControl x:Name="LogSummaryControl" />
+
+        <RecordLogList:RecordLogListControl x:Name="RecordLogListControl" Grid.Row="2" />
 
     </Grid>
 </UserControl>
