--- a/IntegrationTool.Module.LoadFromTextFile/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.LoadFromTextFile/ConfigurationWindow.xaml
@@ -6,6 +6,29 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="10*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="78*"/>
+        </Grid.RowDefinitions>
+        <Label Content="Column-Name" Grid.Row="1"/>
+        <TextBox Grid.Column="2" Grid.Row="1" Text="{Binding Path=ColumnName}" />
+        <Label Content="Load-Type" Grid.Row="3"/>
+        <ComboBox x:Name="ddLoadType" Grid.Column="2" SelectedValue="{Binding Path=LoadType, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedValuePath="Tag"  Grid.Row="3" VerticalAlignment="Top" >
+            <ComboBoxItem Content="One row per line" Tag="OneRowPerLine" />
+            <ComboBoxItem Content="Load complete file into one row" Tag="AllInOneRow" />
+        </ComboBox>
+        <ContentControl x:Name="LoadTypeContentControl" Content="ContentControl" Grid.Row="5" Grid.ColumnSpan="5"/>
+
     </Grid>
 </UserControl>
