--- a/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
@@ -3,9 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" d:DesignHeight="289" d:DesignWidth="601">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="71*"/>
+            <ColumnDefinition Width="79*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="50*"/>
+        </Grid.RowDefinitions>
+        <Label Content="Input data" Grid.Row="1" />
+        <TextBox x:Name="tbInputData" IsReadOnly="True" Grid.Row="3" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="0 0 10 0"/>
+        <Label Content="Xsl-Transformation" Grid.Column="1" Grid.Row="1"/>
+        <TextBox Grid.Column="1" Grid.Row="3" AcceptsReturn="True" Text="{Binding Path=TransformationXslt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+        <GridSplitter Width="10" VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.RowSpan="8"/>
+        <Label Content="Generated table" Grid.Row="5" Grid.Column="1"/>
+        <Label Content="Transformed inputdata" Grid.Row="5"/>
+        <Button x:Name="btnUpdateTransformationPreview" Content="Preview transformation" ToolTip="When clicked, the &quot;Transformed inputdata&quot; and the &quot;Generated table&quot; will be updated." HorizontalAlignment="Right" Margin="0,3,10,0" Grid.Row="1" VerticalAlignment="Top" Width="141" Grid.Column="1" Click="btnUpdateTransformationPreview_Click"/>
+        <TextBox Grid.Row="7" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" IsReadOnly="True" Margin="0,0,10,0"/>
+        <DataGrid x:Name="DataPreviewGrid" ItemsSource="{Binding}" RowHeaderWidth="0" SelectionUnit="Cell" SelectionMode="Single" Grid.Column="3" Grid.Row="7" AutoGenerateColumns="True"/>
     </Grid>
 </UserControl>
