--- a/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
@@ -27,7 +27,7 @@
         <Label Content="Generated table" Grid.Row="5" Grid.Column="1"/>
         <Label Content="Transformed inputdata" Grid.Row="5"/>
         <Button x:Name="btnUpdateTransformationPreview" Content="Preview transformation" ToolTip="When clicked, the &quot;Transformed inputdata&quot; and the &quot;Generated table&quot; will be updated." HorizontalAlignment="Right" Margin="0,3,10,0" Grid.Row="1" VerticalAlignment="Top" Width="141" Grid.Column="1" Click="btnUpdateTransformationPreview_Click"/>
-        <TextBox Grid.Row="7" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" IsReadOnly="True" Margin="0,0,10,0"/>
+        <TextBox x:Name="tbTransformedXml" AcceptsReturn="True" Grid.Row="7" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" IsReadOnly="True" Margin="0,0,10,0"/>
         <DataGrid x:Name="DataPreviewGrid" ItemsSource="{Binding}" RowHeaderWidth="0" SelectionUnit="Cell" SelectionMode="Single" Grid.Column="3" Grid.Row="7" AutoGenerateColumns="True"/>
     </Grid>
 </UserControl>
