--- a/IntegrationTool.ProjectDesigner/Screens/DataPreviewWindow.xaml
+++ b/IntegrationTool.ProjectDesigner/Screens/DataPreviewWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="IntegrationTool.ProjectDesigner.Screens.DataPreviewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DataPreviewWindow" Height="326" Width="780" WindowStartupLocation="CenterScreen">
+        Title="DataPreviewWindow" Height="334.466" Width="739.783" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
@@ -18,7 +18,8 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        <Label x:Name="lblTitle" Style="{StaticResource MainTitle}" Grid.Column="1" Content="Data Preview" Grid.ColumnSpan="2" Margin="0,6,0,0" />
+        <Label x:Name="lblTitle" Style="{StaticResource MainTitle}" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,6,0,0" >Data Preview</Label>
+        <Label Grid.Column="1" Content="(Limited to max. 10'000 records)" Margin="155,16,0,0" HorizontalAlignment="Left" Grid.ColumnSpan="2" Width="451"/>
         <Button x:Name="btnOk" Content="Ok" Grid.Column="2" Grid.Row="4" Click="btnOk_Click"/>
         <DataGrid x:Name="DataPreviewGrid" ItemsSource="{Binding}" RowHeaderWidth="0" SelectionUnit="Cell" SelectionMode="Single" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" AutoGenerateColumns="True"/>
     </Grid>
