--- a/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
@@ -3,14 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" d:DesignHeight="289" d:DesignWidth="601">
+             mc:Ignorable="d" d:DesignHeight="293" d:DesignWidth="628">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="71*"/>
-            <ColumnDefinition Width="79*"/>
+            <ColumnDefinition Width="150*"/>
+            <ColumnDefinition Width="150*"/>
+            <ColumnDefinition Width="300*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
             <RowDefinition Height="26"/>
             <RowDefinition Height="4"/>
             <RowDefinition Height="50*"/>
@@ -19,15 +22,17 @@
             <RowDefinition Height="4"/>
             <RowDefinition Height="50*"/>
         </Grid.RowDefinitions>
-        <Label Content="Input data" Grid.Row="1" />
-        <TextBox x:Name="tbInputData" IsReadOnly="True" Grid.Row="3" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="0 0 10 0"/>
-        <Label Content="Xsl-Transformation" Grid.Column="1" Grid.Row="1"/>
-        <TextBox Grid.Column="1" Grid.Row="3" AcceptsReturn="True" Text="{Binding Path=TransformationXslt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
-        <GridSplitter Width="10" VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.RowSpan="8"/>
-        <Label Content="Generated table" Grid.Row="5" Grid.Column="1"/>
-        <Label Content="Transformed inputdata" Grid.Row="5"/>
-        <Button x:Name="btnUpdateTransformationPreview" Content="Preview transformation" ToolTip="When clicked, the &quot;Transformed inputdata&quot; and the &quot;Generated table&quot; will be updated." HorizontalAlignment="Right" Margin="0,3,10,0" Grid.Row="1" VerticalAlignment="Top" Width="141" Grid.Column="1" Click="btnUpdateTransformationPreview_Click"/>
-        <TextBox x:Name="tbTransformedXml" AcceptsReturn="True" Grid.Row="7" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" IsReadOnly="True" Margin="0,0,10,0"/>
-        <DataGrid x:Name="DataPreviewGrid" ItemsSource="{Binding}" RowHeaderWidth="0" SelectionUnit="Cell" SelectionMode="Single" Grid.Column="3" Grid.Row="7" AutoGenerateColumns="True"/>
+        <Label Content="Input data (first row)" Grid.Row="3" Grid.ColumnSpan="2" />
+        <TextBox x:Name="tbInputData" IsReadOnly="True" Grid.Row="5" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="0 0 10 0" Grid.ColumnSpan="2"/>
+        <Label Content="Xsl-Transformation" Grid.Column="2" Grid.Row="3"/>
+        <TextBox Grid.Column="2" Grid.Row="5" AcceptsReturn="True" Text="{Binding Path=TransformationXslt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+        <GridSplitter Width="10" VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.RowSpan="10" Grid.Column="1"/>
+        <Label Content="Generated table" Grid.Row="7" Grid.Column="2"/>
+        <Label Content="Transformed inputdata" Grid.Row="7" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnUpdateTransformationPreview" Content="Preview transformation" ToolTip="When clicked, the &quot;Transformed inputdata&quot; and the &quot;Generated table&quot; will be updated." HorizontalAlignment="Right" Margin="0,3,10,0" Grid.Row="3" VerticalAlignment="Top" Width="141" Grid.Column="2" Click="btnUpdateTransformationPreview_Click"/>
+        <TextBox x:Name="tbTransformedXml" AcceptsReturn="True" Grid.Row="9" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" IsReadOnly="True" Margin="0,0,10,0" Grid.ColumnSpan="2"/>
+        <DataGrid x:Name="DataPreviewGrid" ItemsSource="{Binding}" RowHeaderWidth="0" SelectionUnit="Cell" SelectionMode="Single" Grid.Column="2" Grid.Row="9" AutoGenerateColumns="True"/>
+        <Label Content="Input-XML column" Grid.Row="1" />
+        <ComboBox x:Name="InputXmlColumn" Grid.Column="1" Margin="0,3,10,0" Grid.Row="1" VerticalAlignment="Top" SelectedValue="{Binding Path=InputXmlColumn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedValuePath="Name" DisplayMemberPath="DisplayName" ItemsSource="{Binding}" SelectionChanged="InputXmlColumn_SelectionChanged" />
     </Grid>
 </UserControl>
