--- a/IntegrationTool.Module.LoadFromMSSQL/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.LoadFromMSSQL/ConfigurationWindow.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="224" Width="456">
+             mc:Ignorable="d" d:DesignHeight="224" d:DesignWidth="456">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="120"/>
