--- a/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.XmlTransformation/ConfigurationWindow.xaml
@@ -27,7 +27,7 @@
         <Label Content="Xsl-Transformation" Grid.Column="2" Grid.Row="3"/>
         <TextBox Grid.Column="2" Grid.Row="5" AcceptsReturn="True" Text="{Binding Path=TransformationXslt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
         <GridSplitter Width="10" VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.RowSpan="10" Grid.Column="1"/>
-        <Label Content="Generated table" Grid.Row="7" Grid.Column="2"/>
+        <Label Content="Generated table preview (no data-filter applied)" Grid.Row="7" Grid.Column="2"/>
         <Label Content="Transformed inputdata" Grid.Row="7" Grid.ColumnSpan="2"/>
         <Button x:Name="btnUpdateTransformationPreview" Content="Preview transformation" ToolTip="When clicked, the &quot;Transformed inputdata&quot; and the &quot;Generated table&quot; will be updated." HorizontalAlignment="Right" Margin="0,3,10,0" Grid.Row="3" VerticalAlignment="Top" Width="141" Grid.Column="2" Click="btnUpdateTransformationPreview_Click"/>
         <TextBox x:Name="tbTransformedXml" AcceptsReturn="True" Grid.Row="9" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" IsReadOnly="True" Margin="0,0,10,0" Grid.ColumnSpan="2"/>
