--- a/IntegrationTool.Module.LoadFromCSV/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.LoadFromCSV/ConfigurationWindow.xaml
@@ -6,6 +6,31 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="243*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="121*"/>
+            <ColumnDefinition Width="49*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="Delimiter" Grid.Row="1"/>
+        <TextBox Grid.Column="2" Height="23" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=Delimiter}" Margin="0,1,0,0"/>
+        <Label Content="Comment" Grid.Row="3"/>
+        <TextBox Grid.Column="2" Height="23" Grid.Row="3" TextWrapping="Wrap" Text="{Binding Path=Comment}" Margin="0,1,0,0"/>
+        <Label Content="Quote" Grid.Row="5"/>
+        <TextBox Grid.Column="2" Height="23" Grid.Row="5" TextWrapping="Wrap" Text="{Binding Path=Quote}" Margin="0,1,0,0"/>
+        <Label Content="QuoteAllFields" Grid.Row="7"/>
+        <CheckBox Grid.Column="2" IsChecked="{Binding Path=QuoteAllFields}" Margin="0,6,0,0" Grid.Row="7" />
     </Grid>
 </UserControl>
