--- a/IntegrationTool.Setup/Product.wxs
+++ b/IntegrationTool.Setup/Product.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
      xmlns:ui="http://schemas.microsoft.com/wix/UIExtension">
-	<Product Id="*" Name="IntegrationTool 1.11" Language="1033" Version="1.11.0.0" Manufacturer="Peter Widmer" UpgradeCode="16487d7d-3e3d-45e0-9018-7c5382a9a339">
+	<Product Id="*" Name="IntegrationTool 1.12" Language="1033" Version="1.12.0.0" Manufacturer="Peter Widmer" UpgradeCode="16487d7d-3e3d-45e0-9018-7c5382a9a339">
 		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Platform="x64" />
 
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
@@ -191,6 +191,9 @@
       </Component>
       <Component Id="ModuleComponent_LoadFromDynamicsCrm" Win64="yes">
         <File Id="ModuleComponent_LoadFromDynamicsCrm.dll" Source="$(var.IntegrationTool.Module.LoadFromDynamicsCrm.TargetPath)" KeyPath="yes" />
+      </Component>
+      <Component Id="ModuleComponent_LoadFromCsv" Win64="yes">
+        <File Id="ModuleComponent_LoadFromCSV.dll" Source="$(var.IntegrationTool.Module.LoadFromCSV.TargetPath)" KeyPath="yes" />
       </Component>
     </ComponentGroup>
 
