--- a/IntegrationTool.Module.WriteToDynamicsCrmN2N/ConfigurationContent.xaml
+++ b/IntegrationTool.Module.WriteToDynamicsCrmN2N/ConfigurationContent.xaml
@@ -1,22 +1,26 @@
-﻿<UserControl x:Class="IntegrationTool.Module.WriteToDynamicsCrmN2N.ConfigurationWindow"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" d:DesignHeight="267" d:DesignWidth="600">
+             xmlns:DataMappingControl="clr-namespace:IntegrationTool.DataMappingControl;assembly=IntegrationTool.DataMappingControl" x:Class="IntegrationTool.Module.WriteToDynamicsCrmN2N.ConfigurationContent" 
+             mc:Ignorable="d" d:DesignHeight="160" d:DesignWidth="547">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="165"/>
             <ColumnDefinition Width="73*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="50*"/>
             <RowDefinition Height="10"/>
             <RowDefinition Height="24"/>
+
             <RowDefinition Height="4"/>
             <RowDefinition Height="50*"/>
         </Grid.RowDefinitions>
-        <Label Content="Entity 1" Grid.Row="1"/>
-        <ComboBox x:Name="ddEntity1" Grid.Column="1" Margin="0,2,0,0" Grid.Row="1" />
-        <ContentControl x:Name="ConfigurationContent" Grid.Row="3" Grid.ColumnSpan="2"/>
+        <DataMappingControl:MappingControl x:Name="entity1Mapping"  Grid.ColumnSpan="2"/>
+        <Label Content="Entity 2" Grid.Row="2"/>
+        <ComboBox x:Name="ddEntity2" Grid.Column="1" Margin="0,2,0,0" Grid.Row="2" />       
+        <DataMappingControl:MappingControl x:Name="entity2Mapping" Grid.Row="4"  Grid.ColumnSpan="2"/>
     </Grid>
 </UserControl>
