--- a/IntegrationTool.Module.WriteToDynamicsCrmN2N/ConfigurationContent.xaml
+++ b/IntegrationTool.Module.WriteToDynamicsCrmN2N/ConfigurationContent.xaml
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
         <DataMappingControl:MappingControl x:Name="entity1MappingControl"  Grid.ColumnSpan="2"/>
         <Label Content="Entity 2" Grid.Row="2"/>
-        <ComboBox x:Name="ddEntity2" Grid.Column="1" Margin="0,2,0,0" Grid.Row="2" />       
+        <ComboBox x:Name="ddEntity2" Grid.Column="1" Margin="0,2,0,0" Grid.Row="2" SelectionChanged="ddEntity2_SelectionChanged" />       
         <DataMappingControl:MappingControl x:Name="entity2MappingControl" Grid.Row="4"  Grid.ColumnSpan="2"/>
     </Grid>
 </UserControl>
