--- a/IntegrationTool.Module.LoadFromDynamicsCrm/UserControls/FetchXmlControl.xaml
+++ b/IntegrationTool.Module.LoadFromDynamicsCrm/UserControls/FetchXmlControl.xaml
@@ -3,9 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" d:DesignHeight="239" d:DesignWidth="477">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="176*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="22*"/>
+            <RowDefinition Height="10"/>
+        </Grid.RowDefinitions>
+        <Label Content="Fetch-Xml"/>
+        <TextBox TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=FetchXml}" Grid.Column="2" Grid.RowSpan="2"/>
+
     </Grid>
 </UserControl>
