--- a/IntegrationTool.Module.ConnectToUrl/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.ConnectToUrl/ConfigurationWindow.xaml
@@ -4,8 +4,25 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="288" d:DesignWidth="444">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="208*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="165"/>
+            <ColumnDefinition Width="63*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="Url" Grid.Row="1"/>
+        <TextBox Grid.Column="1" Height="23" Grid.Row="1" Text="{Binding Path=Url}"  Margin="0,4,0,0" />
+        <Label Content="Use proxy" Grid.Row="3" />
+        <CheckBox Content="{Binding Path=UseProxySettings}" Grid.Column="1" HorizontalAlignment="Left" Margin="0,6,0,0" Grid.Row="3"/>
+
     </Grid>
 </UserControl>
