--- a/IntegrationTool.Module.StringTranformation/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.StringTranformation/ConfigurationWindow.xaml
@@ -41,9 +41,11 @@
                     <ComboBoxItem Content="Pad Left" Tag="PadLeft" />
                     <ComboBoxItem Content="Pad Right" Tag="PadRight" />
                     <ComboBoxItem Content="Replace" Tag="Replace" />
+                    <ComboBoxItem Content="Set Value" Tag="SetValue" />
                     <ComboBoxItem Content="Trim" Tag="Trim" />
                     <ComboBoxItem Content="Trim Start" Tag="TrimStart" />
-                    <ComboBoxItem Content="Trim End" Tag="TrimEnd" />
+                    <ComboBoxItem Content="Trim End" Tag="TrimEnd" />                   
+                    
                 </ComboBox>
 
                 <Label x:Name="DataTemplateLoaded" Visibility="Hidden" Content="DataTemplateLoadedControl" Loaded="DataTemplateLoaded_Loaded" />
