--- a/IntegrationTool.Module.StringTranformation/UserControls/StringTransformationControl.xaml
+++ b/IntegrationTool.Module.StringTranformation/UserControls/StringTransformationControl.xaml
@@ -26,6 +26,7 @@
             <ComboBoxItem Content="Pad Left" Tag="PadLeft" />
             <ComboBoxItem Content="Pad Left" Tag="PadRight" />
             <ComboBoxItem Content="Replace" Tag="Replace" />
+            <ComboBoxItem Content="Regex Replace" Tag="Regex" />
             <ComboBoxItem Content="Set Value" Tag="SetValue" />
             <ComboBoxItem Content="Trim" Tag="Trim" />
             <ComboBoxItem Content="Trim Start" Tag="TrimStart" />
