--- a/IntegrationTool.DiagramDesigner/Resources/DesignerItem.xaml
+++ b/IntegrationTool.DiagramDesigner/Resources/DesignerItem.xaml
@@ -100,8 +100,16 @@
         </Setter>
     </Style>
 
-    <!-- ConnectorDecoratorTemplate Default Template -->
-    <ControlTemplate x:Key="ConnectorDecoratorTemplate" TargetType="{x:Type Control}">
+    <ControlTemplate x:Key="DefaultDecoratorTemplate" TargetType="{x:Type Control}">
+        <Grid Margin="-5">
+            <s:Connector x:Name="Left" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Left" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <s:Connector x:Name="Top" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Top" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+            <s:Connector x:Name="Right" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Right" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            <s:Connector x:Name="Bottom" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="DefaultDecoratorWithErrorTemplate" TargetType="{x:Type Control}">
         <Grid Margin="-5">
             <s:Connector x:Name="Left" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Left" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <s:Connector x:Name="Top" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Top" VerticalAlignment="Top" HorizontalAlignment="Center"/>
@@ -175,7 +183,7 @@
                         <!-- PART_ConnectorDecorator -->
                         <Control x:Name="PART_ConnectorDecorator"
                                  Visibility="Hidden"
-                                 Template="{StaticResource ConnectorDecoratorTemplate}"/>                        
+                                 Template="{DynamicResource ErrorConnectorDecoratorTemplate}"/>                        
                     </Grid>
                     <ControlTemplate.Triggers>
                         <DataTrigger Value="True" Binding="{Binding RelativeSource={RelativeSource Self},Path=IsGroup}">
