Worked on JoinRecords

--- a/IntegrationTool.DiagramDesigner/Resources/DesignerItem.xaml
+++ b/IntegrationTool.DiagramDesigner/Resources/DesignerItem.xaml
@@ -119,6 +119,14 @@
         </Grid>
     </ControlTemplate>
 
+    <ControlTemplate x:Key="MergeDecoratorTemplate" TargetType="{x:Type Control}">
+        <Grid Margin="-5">
+            <s:Connector x:Name="TopLeft" Type="Default" Style="{DynamicResource DefaultConnectorStyle}"  Margin="0 0 50 0" Orientation="Top" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+            <s:Connector x:Name="TopRight" Type="Default" Style="{DynamicResource DefaultConnectorStyle}"  Margin="0 0 -50 0" Orientation="Top" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+            <s:Connector x:Name="Bottom" Type="Default" Style="{DynamicResource DefaultConnectorStyle}" Orientation="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+        </Grid>
+    </ControlTemplate>
+
     <!-- ResizeDecorator Default Template -->
     <ControlTemplate x:Key="ResizeDecoratorTemplate" TargetType="{x:Type Control}">
         <Grid Opacity="0.7" SnapsToDevicePixels="true">
